give/discard